# amazonia-speech-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: development.yml  main.yml
core/: __init__.py  settings.py
core/use_cases/transcribe_audio/: handler.py  input.py
core/utils/: __init__.py
grpc_server/: __init__.py  __main__.py  generate_protos.sh
grpc_server/hydrators/: __init__.py  transcription_request_to_use_case_input.py
grpc_server/pb/: __init__.py
grpc_server/proto/: health.proto  speech.proto
grpc_server/services/: __init__.py  health.py  speech.py
pkg/: __init__.py
pkg/ai_models/: __init__.py  base.py  factory.py  guara.py
pkg/storage/: __init__.py  retriever_document_storage.py  settings.py
pkg/storage/providers/: boto3_document_storage.py
pkg/telemetry/: __init__.py  metrics.py  tracer.py
